weight to the shipPrice
Co-Authored By: Harrison Strand <harrisonstrand@gmail.com>
Co-authored-by: Joseph Nero <josephnero111@gmail.com>

--- a/Views/Home/Parcel.cshtml
+++ b/Views/Home/Parcel.cshtml
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-  Based on your dimesions of: @Model.Length, @Model.Width, @Model.Height and your weight of: @Model.Weight
+  Based on your dimesions of: @Model.BoxLength, @Model.BoxWidth, @Model.BoxHeight and your weight of: @Model.BoxWeight
   <br>
   Your Total Shipping Price: @Model.ShipPrice()
   </body>
